test/analyze/type_check/continue/continue_outside_loop.myte
module continue_outside_loop

fun main() {
  continue;
}